Fix image clip on mobile devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -687,6 +687,9 @@
   .overflow-auto {
     overflow: auto;
   }
+  .overflow-clip {
+    overflow: clip;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
